--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -48,6 +48,17 @@
   <p>{{ paymentDeclaration.explanation }}</p>
 {% endmacro %}
 
+
+{% macro fullResponseFragment() %}
+  {% if(directionsQuestionnaireEnabled) %}
+    <h2 class="heading-medium">{{ t('Full response') }}</h2>
+    <p>{{ internalLink(t('Download their full response and hearing requirements'), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId })) }}(PDF).</p>
+  {% else %}
+    <h2 class="heading-medium">{{ t('Full response') }}</h2>
+    <p>{{ internalLink(t('Download their full response'), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId })) }}(PDF).</p>
+  {% endif %}
+{% endmacro %}
+
 {% macro downloadDQs() %}
   {% if dqsEnabled %}
     <div class="form-group">
@@ -125,7 +136,7 @@
           }}
         {% endif %}
 
-        {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
+          {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
 
         {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
       {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
