--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -152,6 +152,23 @@
   </div>
 {% endmacro %}
 
+{% macro claimRejectedDefendantDefenceFreeMediationYESForClaimantDashboard(claim) %}
+  {{ t('You’ve rejected the defendant’s response.') }}
+
+  {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+    <p>{{ t('You’ve both agreed to try mediation.') }}</p>
+  {% endif %}
+{% endmacro %}
+
+{% macro claimRejectedDefendantDefenceFreeMediationYESForClaimantDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('You’ve rejected the defendant’s response.') }}</h2>
+    <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange an appointment.') }}</p>
+    {{ externalLink('Find out how mediation works', 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
+    <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
+  </div>
+{% endmacro %}
+
 {% macro claimRejectedFreeMediationYESForClaimantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
@@ -163,6 +180,40 @@
     <p>{{ t('If you don’t send an email before the deadline, the claim will proceed without mediation.') }}</p>
     <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
   </div>
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForClaimantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Decide whether to proceed') }}</h2>
+    <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ t('You need to decide whether to proceed with the claim. You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
+        { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
+    <p>{{ _respond(claim, 'View and respond') }}</p>
+  </div>
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForDefendantClaimDetails(claim) %}
+  <div class="status-block">
+    <h2 class="heading-small">{{ t('Wait for the claimant to respond') }}</h2>
+    {% if claim.response.freeMediation === YesNoOption.Yes %}
+      <p>{{ t('You have rejected the claim. You’ve suggested mediation.') }}</p>
+      <p>{{ t('We’ll ask {{ claimantName }} if they agree to take part in mediation.',{ claimantName: claim.claimData.claimant.name }) }}</p>
+      <p>{{ t('If they agree, we’ll contact you with details of your appointment. If not, you might have to go to a hearing.') }}</p>
+    {% endif %}
+
+    <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
+    <p>{{ t('You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
+        { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
+    <p>{{ _respond(claim, 'View and respond') }}</p>
+  </div>
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForClaimantDashboard(claim) %}
+  {{ t('Decide whether to proceed') }}
+{% endmacro %}
+
+{% macro claimRejectedWithDQsForDefendantDashboard(claim) %}
+  {{ t('Wait for the claimant to respond') }}
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationYESForDefendantDashboard() %}
@@ -202,10 +253,10 @@
 
 {% macro claimRejectedFreeMediationNOWithoutDQsForClaimantClaimDetails(claim) %}
   <div class="status-block">
-    <h2 class="heading-small">{{ t('Tell us your hearing requirements') }}</h2>
-    <p>{{ t('You need to ' + internalLink('complete a directions questionnaire ',
-        DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'form to tell us your requirements in case there’s a hearing.') | safe }}</p>
-    <p>{{ t('The claim won’t proceed if you don’t complete and return the form before 4pm on {{ deadline }}.',
+    <h2 class="heading-small">{{ t('The defendant has rejected your claim') }}</h2>
+    <p>{{ t('They said they dispute your claim.') }}</p>
+    {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
+    <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before 4pm on {{ deadline }}.',
         { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
     <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
   </div>
