--- a/src/main/features/claimant-response/views/court-offered-set-date.njk
+++ b/src/main/features/claimant-response/views/court-offered-set-date.njk
@@ -3,7 +3,8 @@
 {% from "form.njk" import csrfProtection, errorSummary, radioGroup, saveAndContinueButton %}
 
 {% set heading = 'The defendant can’t pay by your proposed date' %}
-{% set date = t('Do you accept a repayment date of {{ paymentDate }}?', { paymentDate: paymentDate | date }) %}
+{% set date = paymentDate | date %}
+{% set dateQuery = t('Do you accept a repayment date of {{ paymentDate }}?', { paymentDate: date }) %}
 
 
 {% block content %}
@@ -17,7 +18,7 @@
 
         {{
         radioGroup(
-          label = date,
+          label = dateQuery,
           labelForScreenReadersOnly = false,
           form = form,
           name = 'accept',
