--- a/src/main/features/directions-questionnaire/views/expert-guidance.njk
+++ b/src/main/features/directions-questionnaire/views/expert-guidance.njk
@@ -22,7 +22,7 @@
     <p>{{ t('If you win the case you may be able to recover a maximum of £750 of the cost you paid. A judge will rule on this at the end of the hearing.') }}</p>
 
     <h2 class="heading-medium">{{ t('If you get permission to use an expert') }}</h2>
-    <p>{{ t('The judge will ask one of you to make a list of 3 independent experts who can provide a written report in return for a fee.') }}</p>
+    <p>{{ t('The judge may ask one of you to make a list of 3 independent experts who can provide a written report in return for a fee.') }}</p>
     <p>{{ t('You must avoid discussing the case in detail with the 3 experts.') }}</p>
     <p>{{ t('The other party then chooses one expert from the list. After that, you both need to follow these steps:') }}</p>
     <ul class="list list-number">
