--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -1,8 +1,15 @@
 {% from "table.njk" import tableStart, tableEnd, row %}
 
-{% macro freeMediationBlock(claim, mediationDraft, contactPerson, contactNumber, mediationPilot) %}
-  {{ tableStart('freeMediation', 'Consider free mediation') }}
-  {% if mediationPilot and mediationDraft.willYouTryMediation.option %}
+{% macro freeMediationBlock(claim, mediationDraft, contactPerson, contactNumber, mediationPilot, mediationEnabled) %}
+  {{ tableStart('freeMediation', 'Free telephone mediation') }}
+  {% if not mediationEnabled %}
+    {{ row(
+      label = 'Free mediation?',
+      value = t(mediationDraft.willYouTryMediation.option) | capitalize,
+      changeLink = MediationPaths.tryFreeMediationPage.evaluateUri({ externalId: claim.externalId }),
+      bold = true
+    ) }}
+  {% elseif mediationPilot and mediationDraft.willYouTryMediation.option %}
     {{ row(
       label = 'Will you try free mediation?',
       value = t(mediationDraft.willYouTryMediation.option) | capitalize,
@@ -17,7 +24,7 @@
       bold = true
     ) }}
   {% endif %}
-  {% if mediationPilot and mediationDraft.willYouTryMediation.option === YesNoOption.YES.option %}
+  {% if mediationEnabled and mediationDraft.willYouTryMediation.option === YesNoOption.YES.option %}
     {{ row(
       label = 'Agree to mediation conditions',
       value = t(mediationDraft.youCanOnlyUseMediation.option) | capitalize,
