--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -233,11 +233,13 @@
 
 {% macro claimRejectedFreeMediationYESForDefendantClaimDetails(claim) %}
   <div class="status-block">
-    <h2 class="heading-small">{{ t('Decide whether to proceed') }}</h2>
-    <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
-    <p>{{ t('You need to decide whether to proceed with the claim. You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
-        { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
-    <p>{{ internalLink(t('View and respond'), ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }), 'button button-primary') }}</p>
+    <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+    <p>{{ t('You have rejected the claim. You’ve suggested mediation.') }}</p>
+    <p>{{ t('We’ll ask {{ claimantName }} if they agree to take part in mediation.',
+        { claimantName: claim.claimData.claimant.name }) }}</p>
+    <p>{{ t('If they say yes, we’ll arrange a date for mediation. If they say no we’ll send you a directions questionnaire - '
+        + 'this is a form you complete to tell us more about the claim.') }}</p>
+    <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
   </div>
 {% endmacro %}
 
