--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -280,3 +280,36 @@
 {% macro claimRejectedFreeMediationNOWithoutDQsForDefendantDashboard() %}
   {{ t('You’ve rejected the claim and suggested mediation. We’ll ask the claimant if they agree to take part in mediation.') }}
 {% endmacro %}
+
+{% macro directionsOrderIssued(claim) %}
+  <h2 class="heading-small">{{ t('Send us more details before the hearing') }}</h2>
+  <p>{{ t('The court has ordered you to send more details.') }}</p>
+  <p>
+  {{ internalLink(t('Download the court’s order'), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId })) }}
+  {{ t('(PDF)') }} to find out the details you need to send.
+  </p>
+  <h2 class="heading-small">{{ t('Deadline for posting the details') }}</h2>
+  <p> {{ t('You must make sure the court and the claimant receive a letter with the details before 4pm on 23 August 2019.') }}
+
+  <h2 class="heading-small">{{ t('Where to post the details') }}
+  <p>{{ t('The court’s address is:') }}</p>
+  <p>
+    {{ t('The claimant’s address is:') }}
+  </p>
+  <p>{{ claim.claimData.claimants[0].address.line1 }}<br>
+  {{ claim.claimData.claimants[0].address.line2 }}<br>
+  {{ claim.claimData.claimants[0].address.line3 }}<br>
+  {{ claim.claimData.claimants[0].address.city }}<br>
+  {{ claim.claimData.claimants[0].address.postcode }}</p>
+
+  <h2 class="heading-small">{{ t('If you don’t send us more details') }}</h2>
+  <p>The court can cancel your defence and the claimant can request a County Court Judgment (CCJ) against you.</p>
+  <h2 class="heading-small">{{ t('If you have a problem with the order') }}</h2>
+
+  <p>
+    {{ t('You can ask the court to review it. You need to do this before 4pm on 20 August 2019.') }}
+  </p>
+  <p>
+    {{ t('A judge will consider your request. You should give details of how you want the order changed and the reasons for your request.') }}
+  </p>
+{% endmacro %}
