Update content to match prototype and fix check-and-send logic

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -191,6 +191,10 @@
 
       {{ directionsQuestionnaire() }}
 
+    {% if not directionsQuestionnaireEnabled %}
+      {{ tableEnd() }}
+    {% endif %}
+
     {% elseif alreadyPaid %}
       {% if draft.partPaymentReceived %}
         {{ row(label = 'Do you agree the defendant has paid ' + amount | numeral + '?', bold = true,
