--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -14,7 +14,7 @@
     <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
     <p>{{ t('We’ll contact you if we set a hearing date to tell you how to prepare.') }}</p>
   {% endif %}
-{% elif claim.response.directionsQuestionnaire.selfWitness %}
+{% elif claim.response.directionsQuestionnaire.se %}
   <p>{{ t('We’ll contact you when {{ claimantName }} responds, to tell you what to do next.', { claimantName: claimantName }) }}</p>
   <p>{{ t('If {{ claimantName }} accepts your response the claim will be ended.', { claimantName: claimantName }) }}</p>
 
@@ -25,7 +25,7 @@
     <p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
   {% endif %}
 {% elif claim.response.freeMediation === FreeMediationOption.YES %}
-  <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you with a date for an appointment. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
+  <p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation. If they agree, we’ll contact you to arrange a call with the mediator. If not, we’ll tell you what to do.', { claimantName: claimantName }) | safe }}</p>
 {% else %}
   <p>{{ t('You’ll have to go to a hearing.') }}</p>
   <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
