--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -97,12 +97,23 @@
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationNOForDefendantClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('Wait for the claimant to respond') }}</h2>
-    <p>{{ t('You’ve rejected the claim.') }}</p>
-    <p>{{ t('You said you don’t want to use mediation to solve it. You might have to go to a hearing.') }}</p>
-    <p>{{ t('We’ll contact you when the claimant responds.') }}</p>
-  </div>
+  {% if featureToggles.mediation %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('Wait for the claimant to respond') }}</h2>
+      <p>{{ t('You’ve rejected the claim.') }}</p>
+      <p>{{ t('You said you don’t want to use mediation to solve it. You might have to go to a hearing.') }}</p>
+      <p>{{ t('We’ll contact you when the claimant responds.') }}</p>
+    </div>
+  {% else %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+      <p>{{ t('You’ve rejected the claim and said you don’t want to use mediation to solve it. You’ll have to go to a hearing.') }}</p>
+      {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
+      <p>{{ t('Your defence will be cancelled if you don’t complete and return the form before 4pm on {{ deadline }}.',
+          { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+      <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
+    </div>
+  {% endif %}
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationYESForDefendantDashboard() %}
@@ -110,15 +121,24 @@
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationYESForDefendantClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
-    <p>{{ t('You have rejected the claim. You’ve suggested mediation.') }}</p>
-    <p>{{ t('We’ll ask {{ claimantName }} if they agree to take part in mediation.',
-        { claimantName: claim.claimData.claimant.name }) }}</p>
-    <p>{{ t('If they say yes, we’ll arrange a date for mediation. If they say no we’ll send you a directions questionnaire - '
-        + 'this is a form you complete to tell us more about the claim.') }}</p>
-    <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
-  </div>
+  {% if featureToggles.mediation %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('Wait for the claimant to respond') }}</h2>
+      <p>{{ t('You’ve rejected the claim.') }}</p>
+      <p>{{ t('You said you don’t want to use mediation to solve it. You might have to go to a hearing.') }}</p>
+      <p>{{ t('We’ll contact you when the claimant responds.') }}</p>
+    </div>
+  {% else %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+      <p>{{ t('You have rejected the claim. You’ve suggested mediation.') }}</p>
+      <p>{{ t('We’ll ask {{ claimantName }} if they agree to take part in mediation.',
+          { claimantName: claim.claimData.claimant.name }) }}</p>
+      <p>{{ t('If they say yes, we’ll arrange a date for mediation. If they say no we’ll send you a directions questionnaire - '
+          + 'this is a form you complete to tell us more about the claim.') }}</p>
+      <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
+    </div>
+  {% endif %}
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationYESForClaimantDashboard(claim) %}
@@ -262,11 +282,35 @@
 {% endmacro %}
 
 {% macro claimRejectedForClaimantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('Decide whether to proceed') }}</h2>
-  <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
-  <p>{{ t('You need to decide whether to proceed with the claim. You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
-      { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
-  <p>{{ internalLink(t('View and respond'), ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }), 'button button-primary') }}</p>
+  {% if featureToggles.mediation %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('Decide whether to proceed') }}</h2>
+      <p>{{ t('{{ defendantName }} has rejected your claim.', { defendantName: claim.claimData.defendant.name }) }}</p>
+      <p>{{ t('You need to decide whether to proceed with the claim. You need to respond before 4pm on {{ respondToMediationDeadline }}. Your claim won’t continue if you don’t respond by then.',
+          { respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
+      <p>{{ internalLink(t('View and respond'), ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }), 'button button-primary') }}</p>
+    </div>
+  {% elif claim.response.freeMediation === YesNoOption.YES.option %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
+      <p>{{ t('{{ defendantName }} has rejected the claim. They’ve suggested mediation to help resolve this dispute.',
+          { defendantName: claim.claimData.defendant.name }) }}</p>
+      <p>{{ t(externalLink('Find out how mediation works', 'https://formfinder.hmctsformfinder.justice.gov.uk/ex730-eng.pdf') + ' (PDF, 399KB)') | safe }}</p>
+      <p>{{ t('You need to email {{ emailAddress }} before before 4pm on {{ respondToMediationDeadline }} to tell us if you agree to mediation or not.',
+          { emailAddress: supportEmailAddress, respondToMediationDeadline: claim.respondToMediationDeadline | date }) }}</p>
+      <p>{{ t('If you don’t send an email before the deadline, the claim will proceed without mediation.') }}</p>
+      <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
+    </div>
+  {% else %}
+    <div class="status-block">
+      <h2 class="heading-small">{{ t('The defendant has rejected your claim') }}</h2>
+      <p>{{ t('They said they dispute your claim.') }}</p>
+      {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
+      <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before 4pm on {{ deadline }}.',
+          { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
+      <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
+    </div>
+  {% endif %}
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationNOWithoutDQsForClaimantClaimDetails(claim) %}
