Revert content change for button

--- a/src/main/features/ccj/views/confirmation-ccj.njk
+++ b/src/main/features/ccj/views/confirmation-ccj.njk
@@ -25,7 +25,7 @@
 
       {% include "includes/service-survey-link-claimant.njk" %}
 
-      <p>{{ internalLink('Continue', DashboardPaths.dashboardPage.uri, 'button') | safe }}</p>
+      <p>{{ internalLink('Go to your account', DashboardPaths.dashboardPage.uri, 'button') | safe }}</p>
 
       {{ supportWidget() }}
     </div>
