--- a/src/main/features/ccj/views/confirmation-redetermination.njk
+++ b/src/main/features/ccj/views/confirmation-redetermination.njk
@@ -42,7 +42,7 @@
         {% include "includes/service-survey-link-defendant.njk" %}
       {% endif %}
 
-      <p>{{ internalLink('Continue', DashboardPaths.dashboardPage.uri, 'button') | safe }}</p>
+      <p>{{ internalLink('Go to your account', DashboardPaths.dashboardPage.uri, 'button') | safe }}</p>
 
       {{ supportWidget() }}
     </div>
