--- a/src/main/features/settlement-agreement/views/settlement-agreement-confirmation.njk
+++ b/src/main/features/settlement-agreement/views/settlement-agreement-confirmation.njk
@@ -50,7 +50,7 @@
       <p>{{ t('Make sure you get receipts for any payments.') }}</p>
     {% endif %}
     {% include "includes/service-survey-link-defendant.njk" %}
-    {{ internalLink('Continue', DashboardPaths.dashboardPage.uri, 'button') }}
+    {{ internalLink('Go to your account', DashboardPaths.dashboardPage.uri, 'button') }}
     {{ supportWidget() }}
 </div>
 {% endblock %}
