--- a/src/main/features/offer/views/settled.njk
+++ b/src/main/features/offer/views/settled.njk
@@ -44,7 +44,7 @@
       {% include "includes/service-survey-link-defendant.njk" %}
 
       <p>
-        {{ internalLink(t('Continue'), DashboardPaths.dashboardPage.uri, 'button') }}
+        {{ internalLink(t('Go to your account'), DashboardPaths.dashboardPage.uri, 'button') }}
       </p>
 
       {{ supportWidget() }}
