--- a/src/main/features/paid-in-full/views/confirmation.njk
+++ b/src/main/features/paid-in-full/views/confirmation.njk
@@ -14,7 +14,7 @@
       </div>
       {% include "includes/service-survey-link-claimant.njk" %}
 
-      <p>{{ internalLink(t('Continue'), DashboardPaths.dashboardPage.uri, 'button') }}</p>
+      <p>{{ internalLink(t('Go to your account'), DashboardPaths.dashboardPage.uri, 'button') }}</p>
 
       {{ supportWidget() }}
     </div>
