--- a/src/main/features/response/views/confirmation.njk
+++ b/src/main/features/response/views/confirmation.njk
@@ -57,7 +57,7 @@
 
       {% include "includes/service-survey-link-defendant.njk" %}
 
-      <p>{{ internalLink(t('Continue'), DashboardPaths.dashboardPage.uri, 'button') }}</p>
+      <p>{{ internalLink(t('Go to your account'), DashboardPaths.dashboardPage.uri, 'button') }}</p>
 
       {{ supportWidget() }}
     </div>
