--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -147,7 +147,6 @@
       <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange a call with the mediator.') }}</p>
       {{ externalLink(t('Find out how mediation works'), 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
     {% endif %}
-
     <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
   </div>
 {% endmacro %}
@@ -180,7 +179,12 @@
         { emailAddress: supportEmailAddress, respondToMediationDeadline: mediationDeadline | date }) }}</p>
     <p>{{ t('If you don’t send an email before the deadline, the claim will proceed without mediation.') }}</p>
     {% endif %}
-    <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
+    {% if claim.response.directionsQuestionnaire %}
+      <p>{{ _downloadResponseLink(claim, 'Download their full response and hearing requirements') }}</p>
+    {% else %}
+        <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
+    {% endif %}
+
   </div>
 {% endmacro %}
 
