--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -206,7 +206,11 @@
     {% elif state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
       {{ requestCCJ(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
-      {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
+      {% if claim.directionOrder !== undefined %}
+        {{ directionsOrderIssuedForClaimant(claim) }}
+      {% else %}
+        {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
+      {% endif %}
     {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
       {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
@@ -298,7 +302,11 @@
       {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
         {{ offerSettlementReachedForDefendant(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
-        {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+        {% if claim.directionOrder !== undefined %}
+          {{ directionsOrderIssuedForDefendant(claim) }}
+        {% else %}
+          {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+        {% endif %}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
